# larasynth

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  mkdocs.yml  s1.ps1  s2.ps1
docs/: futuredevs.md  guide.md  index.md  topics.md  tutorial.md
docs/futuredevs/: futuredevs.md
docs/futuredevs/gui/designer/: settingsdialog.ui  trainingsettingsdialog.ui
docs/futuredevs/ref/: config.h
docs/midi/: larasynth_tutorial.mid
lib/: CMakeLists.txt  Makefile.in
lib/gtest/: CMakeLists.txt  Makefile.in
ref/: config.h.in
release_scripts/arch_linux/: PKGBUILD
scripts/: browse_results.py
src/: CMakeLists.txt  Makefile.am  Makefile.in  config_directory.cpp  config_directory.hpp  config_parameter.cpp  config_parameter.hpp  config_parameters.cpp  config_parameters.hpp  config_parser.cpp  config_parser.hpp  config_variable_to_set.hpp  debug.hpp  event.cpp  event.hpp  event_handler.cpp  event_handler.hpp  event_logger.cpp  event_logger.hpp  event_pool.cpp  event_pool.hpp  event_queue.cpp  event_queue.hpp  example_config_string.hpp  filesystem_operations.hpp  input_features.hpp  interactive_prompt.cpp  interactive_prompt.hpp  lara.cpp  lara.hpp  lexer.cpp  lexer.hpp  lock_free_queue.hpp  lstm_activation_function.hpp  lstm_architecture.cpp  lstm_architecture.hpp  lstm_config.cpp  lstm_config.hpp  lstm_defaults.hpp  lstm_gated_connection.hpp  (+60 more)
src/gui/: CMakeLists.txt
src/gui/designer/: larasynthgui.ui  settingsdialog.ui  trainingsettingsdialog.ui
src/littlelstm/: json_exporter.cpp  json_exporter.hpp  json_importer.cpp  json_importer.hpp  lstm_activation_function.hpp  lstm_architecture.cpp  lstm_architecture.hpp  lstm_gated_connection.hpp  lstm_layer_config.cpp  lstm_layer_config.hpp  lstm_network.cpp  lstm_network.hpp  lstm_order.hpp  lstm_types.hpp  lstm_unit_properties.cpp  lstm_unit_properties.hpp  lstm_weight_generator.hpp  network_exporter.hpp  network_importer.hpp  rand_gen.hpp
tests/: CMakeLists.txt  Makefile.am  Makefile.in  config_directory_test.cpp  config_parser_test.cpp  event_test.cpp  lstm_config_test.cpp  lstm_network_test.cpp  midi_config_test.cpp  midi_file_reader_test.cpp  midi_state_test.cpp  midi_translator_test.cpp  rand_gen_test.cpp  representation_config_test.cpp  ring_buffer_test.cpp  tokens_test.cpp  trainer_test.cpp  training_config_test.cpp  training_event_stream_test.cpp  training_results_test.cpp  training_sequence_parser_test.cpp
tests/test_files/config_directory_test/config_only/: larasynth.conf
tests/test_files/config_parser_test/: lists.conf  one_section.conf  random.conf  two_sections.conf  unset_params.conf
tests/test_files/lstm_config_test/defaults/: larasynth.conf
tests/test_files/lstm_config_test/uniform_rand_double/: larasynth.conf
tests/test_files/lstm_config_test/values/: larasynth.conf
tests/test_files/midi_config_test/all_values/: larasynth.conf
tests/test_files/midi_config_test/one_controller/: larasynth.conf
tests/test_files/midi_file_reader_test/: midi_file_reader_test.mid
tests/test_files/midi_translator_test/: larasynth.conf
tests/test_files/representation_config_test/all_values/: larasynth.conf
tests/test_files/trainer_no_examples_test/: larasynth.conf
tests/test_files/trainer_test/training_examples/: example-2015-08-04-165853.seq
tests/test_files/training_config_test/defaults/: larasynth.conf
tests/test_files/training_config_test/uniform_rand_double/: larasynth.conf
tests/test_files/training_config_test/uniform_rand_positive_int/: larasynth.conf
tests/test_files/training_config_test/values/: larasynth.conf
tests/test_files/training_event_stream_test/: larasynth.conf  test.seq  test2.seq
tests/test_files/training_results_test/: results.json
tests/test_files/training_sequence_parser_test/: test.seq
