AM_CXXFLAGS = $(WARN_CXXFLAGS)
AM_CXXFLAGS += -fPIC -Wall -O2

bin_PROGRAMS = lara
lara_SOURCES = lara.cpp config_directory.cpp interactive_prompt.cpp config_parser.cpp midi_config.cpp rtmidi_client.cpp recorder.cpp config_parameters.cpp config_parameter.cpp tokens.cpp lexer.cpp event_queue.cpp event_pool.cpp event.cpp rtmidi/RtMidi.cpp trainer.cpp training_results.cpp representation_config.cpp training_event_stream.cpp midi_translator.cpp lstm_config.cpp lstm_architecture.cpp lstm_network.cpp lstm_trainer.cpp lstm_layer_config.cpp lstm_unit_properties.cpp midi_min_max.cpp training_sequence_parser.cpp training_sequence.cpp performer.cpp midi_state.cpp training_config.cpp write_training_example.cpp midifile/Binasc.cpp midifile/MidiEvent.cpp midifile/MidiEventList.cpp midifile/MidiFile.cpp midifile/MidiMessage.cpp midifile/Options.cpp midi_file_reader.cpp
