AM_CXXFLAGS = $(WARN_CXXFLAGS)
AM_CXXFLAGS += -fPIC -Wall -O2

bin_PROGRAMS = lara
#lara_SOURCES = lara.cpp config_directory.cpp interactive_prompt.cpp config_parser.cpp midi_config.cpp rtmidi_client.cpp recorder.cpp config_parameters.cpp config_parameter.cpp tokens.cpp lexer.cpp event_queue.cpp event_pool.cpp event.cpp rtmidi/RtMidi.cpp trainer.cpp training_results.cpp representation_config.cpp training_event_stream.cpp midi_translator.cpp lstm_config.cpp lstm_architecture.cpp lstm_network.cpp lstm_trainer.cpp lstm_layer_config.cpp lstm_unit_properties.cpp midi_min_max.cpp training_sequence_parser.cpp training_sequence.cpp performer.cpp midi_state.cpp training_config.cpp write_training_example.cpp midifile/Binasc.cpp midifile/MidiEvent.cpp midifile/MidiEventList.cpp midifile/MidiFile.cpp midifile/MidiMessage.cpp midifile/Options.cpp midi_file_reader.cpp

lara_SOURCES = \
config_directory.cpp \
config_directory.hpp \
config_parameter.cpp \
config_parameter.hpp \
config_parameters.cpp \
config_parameters.hpp \
config_parser.cpp \
config_parser.hpp \
config_variable_to_set.hpp \
debug.hpp \
event.cpp \
event.hpp \
event_logger.cpp \
event_logger.hpp \
event_pool.cpp \
event_pool.hpp \
event_queue.cpp \
event_queue.hpp \
example_config_string.hpp \
filesystem_operations.hpp \
input_features.hpp \
interactive_prompt.cpp \
interactive_prompt.hpp \
json/json.hpp \
lara.cpp \
lexer.cpp \
lexer.hpp \
lock_free_queue.hpp \
lstm_activation_function.hpp \
lstm_architecture.cpp \
lstm_architecture.hpp \
lstm_config.cpp \
lstm_config.hpp \
lstm_defaults.hpp \
lstm_gated_connection.hpp \
lstm_layer_config.cpp \
lstm_layer_config.hpp \
lstm_network.cpp \
lstm_network.hpp \
lstm_order.hpp \
lstm_result.hpp \
lstm_result_json.hpp \
lstm_trainer.cpp \
lstm_trainer.hpp \
lstm_types.hpp \
lstm_unit_properties.cpp \
lstm_unit_properties.hpp \
lstm_validation_results.cpp \
lstm_validation_results.hpp \
lstm_weight_generator.hpp \
midi_client.hpp \
midi_config.cpp \
midi_config.hpp \
midi_file_reader.cpp \
midi_file_reader.hpp \
midi_min_max.cpp \
midi_min_max.hpp \
midi_state.cpp \
midi_state.hpp \
midi_translator.cpp \
midi_translator.hpp \
midi_types.hpp \
midifile/Binasc.cpp \
midifile/Binasc.h \
midifile/MidiEvent.cpp \
midifile/MidiEvent.h \
midifile/MidiEventList.cpp \
midifile/MidiEventList.h \
midifile/MidiFile.cpp \
midifile/MidiFile.h \
midifile/MidiMessage.cpp \
midifile/MidiMessage.h \
midifile/Options.cpp \
midifile/Options.h \
performer.cpp \
performer.hpp \
rand_gen.hpp \
readerwriterqueue/atomicops.h \
readerwriterqueue/readerwriterqueue.h \
readerwriterqueue_lock_free_queue.hpp \
recorder.cpp \
recorder.hpp \
representation_config.cpp \
representation_config.hpp \
representation_defaults.hpp \
rtmidi/RtMidi.cpp \
rtmidi/RtMidi.h \
rtmidi_client.cpp \
rtmidi_client.hpp \
run_modes.hpp \
time_utilities.hpp \
tokens.cpp \
tokens.hpp \
trainer.cpp \
trainer.hpp \
training_config.cpp \
training_config.hpp \
training_defaults.hpp \
training_event_stream.cpp \
training_event_stream.hpp \
training_results.cpp \
training_results.hpp \
training_sequence.cpp \
training_sequence.hpp \
training_sequence_parser.cpp \
training_sequence_parser.hpp \
write_training_example.cpp \
write_training_example.hpp
